package com.example.solver;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SolverApplication {

    public static void main(String[] args) {
        SpringApplication.run(SolverApplication.class, args);
    }
}
